moved to new vm trying profiling for new applications

--- a/experiments/01-prepare-experiments.ipynb
+++ b/experiments/01-prepare-experiments.ipynb
@@ -63,7 +63,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "NAME                            URL                                                            LATEST                                AGE     CONDITIONS   READY   REASON\nautoscale-go                    http://autoscale-go.default.kn.nima-dev.com                    autoscale-go-00035                    142d    3 OK / 3     True    \nbench1                          http://bench1.default.kn.nima-dev.com                          bench1-00054                          150d    3 OK / 3     True    \nbentoml-iris                    http://bentoml-iris.default.kn.nima-dev.com                    bentoml-iris-00171                    53d     3 OK / 3     True    \nbentoml-keras-toxic-comments    http://bentoml-keras-toxic-comments.default.kn.nima-dev.com    bentoml-keras-toxic-comments-00002    90m     3 OK / 3     True    \nbentoml-onnx-resnet50           http://bentoml-onnx-resnet50.default.kn.nima-dev.com           bentoml-onnx-resnet50-00036           53d     3 OK / 3     True    \nbentoml-pytorch-fashion-mnist   http://bentoml-pytorch-fashion-mnist.default.kn.nima-dev.com   bentoml-pytorch-fashion-mnist-00007   5d23h   3 OK / 3     True    \nhelloworld-go                   http://helloworld-go.default.kn.nima-dev.com                   helloworld-go-00001                   152d    3 OK / 3     True    \ntfserving-mobilenetv1           http://tfserving-mobilenetv1.default.kn.nima-dev.com           tfserving-mobilenetv1-00029           53d     3 OK / 3     True    \ntfserving-resnetv2              http://tfserving-resnetv2.default.kn.nima-dev.com              tfserving-resnetv2-00079              53d     3 OK / 3     True    \n"
+      "NAME                    URL                                                          LATEST                        AGE   CONDITIONS   READY   REASON\nbentoml-iris            http://bentoml-iris.default.192-168-23-125.nip.io            bentoml-iris-00009            37d   3 OK / 3     True    \nbentoml-onnx-resnet50   http://bentoml-onnx-resnet50.default.192-168-23-125.nip.io   bentoml-onnx-resnet50-00005   36d   3 OK / 3     True    \nhelloworld-go           http://helloworld-go.default.192-168-23-125.nip.io           helloworld-go-00001           37d   3 OK / 3     True    \ntfserving-mobilenetv1   http://tfserving-mobilenetv1.default.192-168-23-125.nip.io   tfserving-mobilenetv1-00005   36d   3 OK / 3     True    \ntfserving-resnetv2      http://tfserving-resnetv2.default.192-168-23-125.nip.io      tfserving-resnetv2-00004      37d   3 OK / 3     True    \n"
      ]
     }
    ],
@@ -82,6 +82,97 @@
      "name": "stdout",
      "text": [
       "====================\n",
+      "kn service apply bentoml-iris --image ghcr.io/nimamahmoudi/bentoml-iris-classifier:20210429201447 \\\n",
+      "  --limit 'cpu=1000m,memory=1000Mi' \\\n",
+      "  --request 'cpu=1000m,memory=1000Mi' \\\n",
+      "  --port 5000 \\\n",
+      "  -a autoscaling.knative.dev/target=1 \\\n",
+      "  -a autoscaling.knative.dev/metric=concurrency\n",
+      "--------------------\n",
+      "Applying service 'bentoml-iris' in namespace 'default':\n",
+      "\n",
+      "  0.018s The Configuration is still working to reflect the latest desired specification.\n",
+      "  9.392s Traffic is not yet migrated to the latest revision.\n",
+      "  9.415s Ingress has not yet been reconciled.\n",
+      "  9.450s Waiting for load balancer to be ready\n",
+      "  9.626s Ready to serve.\n",
+      "\n",
+      "Service 'bentoml-iris' applied to latest revision 'bentoml-iris-00010' is available at URL:\n",
+      "http://bentoml-iris.default.192-168-23-125.nip.io\n",
+      "====================\n",
+      "kn service apply bentoml-onnx-resnet50 --image ghcr.io/nimamahmoudi/bentoml-onnx-resnet50-b64:20210505124300 \\\n",
+      "  --limit 'cpu=1000m,memory=1000Mi' \\\n",
+      "  --request 'cpu=1000m,memory=1000Mi' \\\n",
+      "  --port 5000 \\\n",
+      "  -a autoscaling.knative.dev/target=1 \\\n",
+      "  -a autoscaling.knative.dev/metric=concurrency\n",
+      "--------------------\n",
+      "Applying service 'bentoml-onnx-resnet50' in namespace 'default':\n",
+      "\n",
+      "  0.021s The Configuration is still working to reflect the latest desired specification.\n",
+      "  8.581s Traffic is not yet migrated to the latest revision.\n",
+      "  8.606s Ingress has not yet been reconciled.\n",
+      "  8.643s Waiting for load balancer to be ready\n",
+      "  9.171s Ready to serve.\n",
+      "\n",
+      "Service 'bentoml-onnx-resnet50' applied to latest revision 'bentoml-onnx-resnet50-00006' is available at URL:\n",
+      "http://bentoml-onnx-resnet50.default.192-168-23-125.nip.io\n",
+      "====================\n",
+      "kn service apply tfserving-resnetv2 --image ghcr.io/nimamahmoudi/tfserving-resnet:20210429213000 \\\n",
+      "  --limit 'cpu=1000m,memory=1000Mi' \\\n",
+      "  --request 'cpu=1000m,memory=1000Mi' \\\n",
+      "  --port 5000 \\\n",
+      "  -a autoscaling.knative.dev/target=1 \\\n",
+      "  -a autoscaling.knative.dev/metric=concurrency\n",
+      "--------------------\n",
+      "Applying service 'tfserving-resnetv2' in namespace 'default':\n",
+      "\n",
+      "  0.018s The Configuration is still working to reflect the latest desired specification.\n",
+      "  3.339s Traffic is not yet migrated to the latest revision.\n",
+      "  3.363s Ingress has not yet been reconciled.\n",
+      "  3.427s Waiting for load balancer to be ready\n",
+      "  3.575s Ready to serve.\n",
+      "\n",
+      "Service 'tfserving-resnetv2' applied to latest revision 'tfserving-resnetv2-00005' is available at URL:\n",
+      "http://tfserving-resnetv2.default.192-168-23-125.nip.io\n",
+      "====================\n",
+      "kn service apply tfserving-mobilenetv1 --image ghcr.io/nimamahmoudi/tfserving-mobilenet:20210430005829 \\\n",
+      "  --limit 'cpu=1000m,memory=1000Mi' \\\n",
+      "  --request 'cpu=1000m,memory=1000Mi' \\\n",
+      "  --port 5000 \\\n",
+      "  -a autoscaling.knative.dev/target=1 \\\n",
+      "  -a autoscaling.knative.dev/metric=concurrency\n",
+      "--------------------\n",
+      "Applying service 'tfserving-mobilenetv1' in namespace 'default':\n",
+      "\n",
+      "  0.021s The Configuration is still working to reflect the latest desired specification.\n",
+      "  3.765s Traffic is not yet migrated to the latest revision.\n",
+      "  3.789s Ingress has not yet been reconciled.\n",
+      "  3.823s Waiting for load balancer to be ready\n",
+      "  4.011s Ready to serve.\n",
+      "\n",
+      "Service 'tfserving-mobilenetv1' applied to latest revision 'tfserving-mobilenetv1-00006' is available at URL:\n",
+      "http://tfserving-mobilenetv1.default.192-168-23-125.nip.io\n",
+      "====================\n",
+      "kn service apply bentoml-pytorch-fashion-mnist --image ghcr.io/nimamahmoudi/bentoml-pytorch-fashion-mnist:20210614122950 \\\n",
+      "  --limit 'cpu=1000m,memory=1000Mi' \\\n",
+      "  --request 'cpu=1000m,memory=1000Mi' \\\n",
+      "  --port 5000 \\\n",
+      "  -a autoscaling.knative.dev/target=1 \\\n",
+      "  -a autoscaling.knative.dev/metric=concurrency\n",
+      "--------------------\n",
+      "Creating service 'bentoml-pytorch-fashion-mnist' in namespace 'default':\n",
+      "\n",
+      "  0.021s The Route is still working to reflect the latest desired specification.\n",
+      "  0.054s Configuration \"bentoml-pytorch-fashion-mnist\" is waiting for a Revision to become ready.\n",
+      " 77.801s ...\n",
+      " 77.835s Ingress has not yet been reconciled.\n",
+      " 77.874s Waiting for load balancer to be ready\n",
+      " 78.425s Ready to serve.\n",
+      "\n",
+      "Service 'bentoml-pytorch-fashion-mnist' created to latest revision 'bentoml-pytorch-fashion-mnist-00001' is available at URL:\n",
+      "http://bentoml-pytorch-fashion-mnist.default.192-168-23-125.nip.io\n",
+      "====================\n",
       "kn service apply bentoml-keras-toxic-comments --image ghcr.io/nimamahmoudi/bentoml-keras-toxic-comment-classification:20210622155420 \\\n",
       "  --limit 'cpu=1000m,memory=1000Mi' \\\n",
       "  --request 'cpu=1000m,memory=1000Mi' \\\n",
@@ -89,16 +180,18 @@
       "  -a autoscaling.knative.dev/target=1 \\\n",
       "  -a autoscaling.knative.dev/metric=concurrency\n",
       "--------------------\n",
-      "Applying service 'bentoml-keras-toxic-comments' in namespace 'default':\n",
+      "Creating service 'bentoml-keras-toxic-comments' in namespace 'default':\n",
       "\n",
-      "  0.055s The Configuration is still working to reflect the latest desired specification.\n",
-      " 12.088s Traffic is not yet migrated to the latest revision.\n",
-      " 12.175s Ingress has not yet been reconciled.\n",
-      " 12.250s Waiting for load balancer to be ready\n",
-      " 12.443s Ready to serve.\n",
+      "  0.016s The Route is still working to reflect the latest desired specification.\n",
+      "  0.057s Configuration \"bentoml-keras-toxic-comments\" is waiting for a Revision to become ready.\n",
+      "  0.094s ...\n",
+      " 53.623s ...\n",
+      " 53.646s Ingress has not yet been reconciled.\n",
+      " 53.686s Waiting for load balancer to be ready\n",
+      " 54.040s Ready to serve.\n",
       "\n",
-      "Service 'bentoml-keras-toxic-comments' applied to latest revision 'bentoml-keras-toxic-comments-00003' is available at URL:\n",
-      "http://bentoml-keras-toxic-comments.default.kn.nima-dev.com\n"
+      "Service 'bentoml-keras-toxic-comments' created to latest revision 'bentoml-keras-toxic-comments-00001' is available at URL:\n",
+      "http://bentoml-keras-toxic-comments.default.192-168-23-125.nip.io\n"
      ]
     }
    ],
