--- a/experiments/03-profile-workload-functions.ipynb
+++ b/experiments/03-profile-workload-functions.ipynb
@@ -1920,54 +1920,54 @@
     "\n",
     "\n",
     "all_configs = [\n",
-    "    {\n",
-    "        'warmup_req_count': 200,\n",
-    "        'total_req_count': 10000,\n",
-    "        'service_name': 'bentoml-iris',\n",
-    "        # cpu_m should always be the first to avoid changing deployment too much\n",
-    "        'cpu_m': [1000],\n",
-    "        'batch_size': [1,5,10,20,50,100],\n",
-    "    },\n",
-    "    {\n",
-    "        'warmup_req_count': 20,\n",
-    "        'total_req_count': 1000,\n",
-    "        'service_name': 'tfserving-resnetv2',\n",
-    "        # cpu_m should always be the first to avoid changing deployment too much\n",
-    "        'cpu_m': [1000],\n",
-    "        'batch_size': [1,2,3,5,10],\n",
-    "    },\n",
-    "    {\n",
-    "        'warmup_req_count': 20,\n",
-    "        'total_req_count': 1000,\n",
-    "        'service_name': 'tfserving-mobilenetv1',\n",
-    "        # cpu_m should always be the first to avoid changing deployment too much\n",
-    "        'cpu_m': [1000],\n",
-    "        'batch_size': [1,2,3,5],\n",
-    "    },\n",
-    "    {\n",
-    "        'warmup_req_count': 20,\n",
-    "        'total_req_count': 1000,\n",
-    "        'service_name': 'bentoml-onnx-resnet50',\n",
-    "        # cpu_m should always be the first to avoid changing deployment too much\n",
-    "        'cpu_m': [1000],\n",
-    "        'batch_size': [1,2,3,5,10],\n",
-    "    },\n",
-    "    {\n",
-    "        'warmup_req_count': 20,\n",
-    "        'total_req_count': 10000,\n",
-    "        'service_name': 'bentoml-pytorch-fashion-mnist',\n",
-    "        # cpu_m should always be the first to avoid changing deployment too much\n",
-    "        'cpu_m': [1000],\n",
-    "        'batch_size': [1,5,10,20,50,100],\n",
-    "    },\n",
-    "    {\n",
-    "        'warmup_req_count': 20,\n",
-    "        'total_req_count': 10000,\n",
-    "        'service_name': 'bentoml-keras-toxic-comments',\n",
-    "        # cpu_m should always be the first to avoid changing deployment too much\n",
-    "        'cpu_m': [1000],\n",
-    "        'batch_size': [1,5,10,20,50,100],\n",
-    "    },\n",
+    "    # {\n",
+    "    #     'warmup_req_count': 200,\n",
+    "    #     'total_req_count': 10000,\n",
+    "    #     'service_name': 'bentoml-iris',\n",
+    "    #     # cpu_m should always be the first to avoid changing deployment too much\n",
+    "    #     'cpu_m': [1000],\n",
+    "    #     'batch_size': [1,5,10,20,50,100],\n",
+    "    # },\n",
+    "    # {\n",
+    "    #     'warmup_req_count': 20,\n",
+    "    #     'total_req_count': 1000,\n",
+    "    #     'service_name': 'tfserving-resnetv2',\n",
+    "    #     # cpu_m should always be the first to avoid changing deployment too much\n",
+    "    #     'cpu_m': [1000],\n",
+    "    #     'batch_size': [1,2,3,5,10],\n",
+    "    # },\n",
+    "    # {\n",
+    "    #     'warmup_req_count': 20,\n",
+    "    #     'total_req_count': 1000,\n",
+    "    #     'service_name': 'tfserving-mobilenetv1',\n",
+    "    #     # cpu_m should always be the first to avoid changing deployment too much\n",
+    "    #     'cpu_m': [1000],\n",
+    "    #     'batch_size': [1,2,3,5],\n",
+    "    # },\n",
+    "    # {\n",
+    "    #     'warmup_req_count': 20,\n",
+    "    #     'total_req_count': 1000,\n",
+    "    #     'service_name': 'bentoml-onnx-resnet50',\n",
+    "    #     # cpu_m should always be the first to avoid changing deployment too much\n",
+    "    #     'cpu_m': [1000],\n",
+    "    #     'batch_size': [1,2,3,5,10],\n",
+    "    # },\n",
+    "    # {\n",
+    "    #     'warmup_req_count': 20,\n",
+    "    #     'total_req_count': 10000,\n",
+    "    #     'service_name': 'bentoml-pytorch-fashion-mnist',\n",
+    "    #     # cpu_m should always be the first to avoid changing deployment too much\n",
+    "    #     'cpu_m': [1000],\n",
+    "    #     'batch_size': [1,5,10,20,50,100],\n",
+    "    # },\n",
+    "    # {\n",
+    "    #     'warmup_req_count': 20,\n",
+    "    #     'total_req_count': 10000,\n",
+    "    #     'service_name': 'bentoml-keras-toxic-comments',\n",
+    "    #     # cpu_m should always be the first to avoid changing deployment too much\n",
+    "    #     'cpu_m': [1000],\n",
+    "    #     'batch_size': [1,5,10,20,50,100],\n",
+    "    # },\n",
     "]\n",
     "results_folder = './results/batch_experiments_default'\n",
     "\n",
@@ -4137,53 +4137,53 @@
    ],
    "source": [
     "all_configs = [\n",
-    "    {\n",
-    "        'warmup_req_count': 200,\n",
-    "        'total_req_count': 10000,\n",
-    "        'service_name': 'bentoml-iris',\n",
-    "        # cpu_m should always be the first to avoid changing deployment too much\n",
-    "        'cpu_m': [250,500,1000,1500,2000],\n",
-    "        'batch_size': [1,5,10,20,50,100],\n",
-    "    },\n",
+    "    # {\n",
+    "    #     'warmup_req_count': 200,\n",
+    "    #     'total_req_count': 10000,\n",
+    "    #     'service_name': 'bentoml-iris',\n",
+    "    #     # cpu_m should always be the first to avoid changing deployment too much\n",
+    "    #     'cpu_m': [250,500,1000,1500,2000],\n",
+    "    #     'batch_size': [1,5,10,20,50,100],\n",
+    "    # },\n",
+    "    # {\n",
+    "    #     'warmup_req_count': 20,\n",
+    "    #     'total_req_count': 1000,\n",
+    "    #     'service_name': 'tfserving-resnetv2',\n",
+    "    #     # cpu_m should always be the first to avoid changing deployment too much\n",
+    "    #     'cpu_m': [500,1000,1500,2000],\n",
+    "    #     'batch_size': [1,2,3,5,10],\n",
+    "    # },\n",
+    "    # {\n",
+    "    #     'warmup_req_count': 20,\n",
+    "    #     'total_req_count': 1000,\n",
+    "    #     'service_name': 'tfserving-mobilenetv1',\n",
+    "    #     # cpu_m should always be the first to avoid changing deployment too much\n",
+    "    #     'cpu_m': [250,500,1000,1500,2000],\n",
+    "    #     'batch_size': [1,2,3,5],\n",
+    "    # },\n",
+    "    # {\n",
+    "    #     'warmup_req_count': 20,\n",
+    "    #     'total_req_count': 1000,\n",
+    "    #     'service_name': 'bentoml-onnx-resnet50',\n",
+    "    #     # cpu_m should always be the first to avoid changing deployment too much\n",
+    "    #     'cpu_m': [250,500,1000,1500,2000],\n",
+    "    #     'batch_size': [1,2,3,5,10],\n",
+    "    # },\n",
+    "    # {\n",
+    "    #     'warmup_req_count': 20,\n",
+    "    #     'total_req_count': 10000,\n",
+    "    #     'service_name': 'bentoml-pytorch-fashion-mnist',\n",
+    "    #     # cpu_m should always be the first to avoid changing deployment too much\n",
+    "    #     'cpu_m': [250,500,1000,1500,2000],\n",
+    "    #     'batch_size': [1,5,10,20,50,100],\n",
+    "    # },\n",
     "    {\n",
     "        'warmup_req_count': 20,\n",
     "        'total_req_count': 1000,\n",
-    "        'service_name': 'tfserving-resnetv2',\n",
-    "        # cpu_m should always be the first to avoid changing deployment too much\n",
-    "        'cpu_m': [500,1000,1500,2000],\n",
-    "        'batch_size': [1,2,3,5,10],\n",
-    "    },\n",
-    "    {\n",
-    "        'warmup_req_count': 20,\n",
-    "        'total_req_count': 1000,\n",
-    "        'service_name': 'tfserving-mobilenetv1',\n",
-    "        # cpu_m should always be the first to avoid changing deployment too much\n",
-    "        'cpu_m': [250,500,1000,1500,2000],\n",
-    "        'batch_size': [1,2,3,5],\n",
-    "    },\n",
-    "    {\n",
-    "        'warmup_req_count': 20,\n",
-    "        'total_req_count': 1000,\n",
-    "        'service_name': 'bentoml-onnx-resnet50',\n",
-    "        # cpu_m should always be the first to avoid changing deployment too much\n",
-    "        'cpu_m': [250,500,1000,1500,2000],\n",
-    "        'batch_size': [1,2,3,5,10],\n",
-    "    },\n",
-    "    {\n",
-    "        'warmup_req_count': 20,\n",
-    "        'total_req_count': 10000,\n",
-    "        'service_name': 'bentoml-pytorch-fashion-mnist',\n",
-    "        # cpu_m should always be the first to avoid changing deployment too much\n",
-    "        'cpu_m': [250,500,1000,1500,2000],\n",
-    "        'batch_size': [1,5,10,20,50,100],\n",
-    "    },\n",
-    "    {\n",
-    "        'warmup_req_count': 20,\n",
-    "        'total_req_count': 10000,\n",
     "        'service_name': 'bentoml-keras-toxic-comments',\n",
     "        # cpu_m should always be the first to avoid changing deployment too much\n",
     "        'cpu_m': [250,500,1000,1500,2000],\n",
-    "        'batch_size': [1,5,10,20,50,100],\n",
+    "        'batch_size': [1,5,10,20],\n",
     "    },\n",
     "]\n",
     "results_folder = './results/batch_experiments_var_cpu'\n",
