fixed plots and running new experiments

--- a/experiments/06-trace-control.ipynb
+++ b/experiments/06-trace-control.ipynb
@@ -174,7 +174,7 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fa64faf8580>]"
+       "[<matplotlib.lines.Line2D at 0x7faf588565b0>]"
       ]
      },
      "metadata": {},
@@ -239,7 +239,7 @@
      "data": {
       "text/plain": [
        "{'maxBufferSize': 1,\n",
-       " 'averageMaxBufferSize': 1,\n",
+       " 'averageMaxBufferSize': 2.8,\n",
        " 'averageActualBatchSize': None,\n",
        " 'maxBufferTimeoutMs': 800,\n",
        " 'currentReplicaCount': 0,\n",
@@ -369,7 +369,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "fe2cba981db9473ea80051bf8b4583dd"
+       "model_id": "79d4c47f54e1476e8db6b5f3e8a02704"
       }
      },
      "metadata": {}
@@ -390,7 +390,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "42587c1c265e465b85d35c48d9c0c91b"
+       "model_id": "804adef778674074b75089ed5bd2cc9c"
       }
      },
      "metadata": {}
@@ -411,7 +411,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "e3a73ff125f649ffb9ececce53f5646d"
+       "model_id": "505cbfcfcd5445c9bcd6d6bd6c7e2a5e"
       }
      },
      "metadata": {}
@@ -432,7 +432,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "1a7ded9a4a384a5abab2bb77b7fc38ce"
+       "model_id": "7985f6efd497403c8683f600ff77cd1e"
       }
      },
      "metadata": {}
@@ -492,15 +492,8 @@
       "  --port 5000 \\\n",
       "  -a autoscaling.knative.dev/target=1 \\\n",
       "  -a autoscaling.knative.dev/metric=concurrency\n",
-      "Applying service 'bentoml-pytorch-fashion-mnist' in namespace 'default':\n",
-      "\n",
-      "  0.034s The Configuration is still working to reflect the latest desired specification.\n",
-      " 12.112s Traffic is not yet migrated to the latest revision.\n",
-      " 12.166s Ingress has not yet been reconciled.\n",
-      " 12.181s Waiting for load balancer to be ready\n",
-      " 12.348s Ready to serve.\n",
-      "\n",
-      "Service 'bentoml-pytorch-fashion-mnist' applied to latest revision 'bentoml-pytorch-fashion-mnist-00022' is available at URL:\n",
+      "No changes to apply to service 'bentoml-pytorch-fashion-mnist'.\n",
+      "Service 'bentoml-pytorch-fashion-mnist' with latest revision 'bentoml-pytorch-fashion-mnist-00022' (unchanged) is available at URL:\n",
       "http://bentoml-pytorch-fashion-mnist.default.192-168-23-125.nip.io\n",
       "waiting for settings to converge\n"
      ]
@@ -545,15 +538,15 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "{'response_time_ms': 566.509,\n",
-       " 'request_id': '5f4d6cca-6924-42cd-acbd-f0c6308de608',\n",
+       "{'response_time_ms': 2918.2290000000003,\n",
+       " 'request_id': '3d58c39a-30ad-4e9f-b884-1c183677b264',\n",
        " 'queue_position': 0,\n",
-       " 'received_at': datetime.datetime(2021, 7, 28, 16, 3, 7, 20000, tzinfo=<DstTzInfo 'America/Toronto' EDT-1 day, 20:00:00 DST>),\n",
-       " 'response_at': datetime.datetime(2021, 7, 28, 16, 3, 7, 581000, tzinfo=<DstTzInfo 'America/Toronto' EDT-1 day, 20:00:00 DST>),\n",
-       " 'upstream_response_time': 558,\n",
+       " 'received_at': datetime.datetime(2021, 7, 28, 16, 6, 4, 415000, tzinfo=<DstTzInfo 'America/Toronto' EDT-1 day, 20:00:00 DST>),\n",
+       " 'response_at': datetime.datetime(2021, 7, 28, 16, 6, 7, 327000, tzinfo=<DstTzInfo 'America/Toronto' EDT-1 day, 20:00:00 DST>),\n",
+       " 'upstream_response_time': 2910,\n",
        " 'upstream_request_count': 1,\n",
-       " 'response_time_ms_server': 561,\n",
-       " 'queue_time_ms': 3}"
+       " 'response_time_ms_server': 2912,\n",
+       " 'queue_time_ms': 2}"
       ]
      },
      "metadata": {},
@@ -607,7 +600,7 @@
      "text": [
       "Controller Disabled!!!\n",
       "============ Experiment Started ============\n",
-      "Time Started: 2021-07-28 16:03:09.566838-04:00\n"
+      "Time Started: 2021-07-28 16:06:08.889015-04:00\n"
      ]
     },
     {
@@ -619,22 +612,10 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "90d84278cafa423196904c0f2c2a4ba9"
+       "model_id": "9617a1075d0740cab2556cae2a2d2502"
       }
      },
      "metadata": {}
-    },
-    {
-     "output_type": "error",
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-13-e74d9ed54448>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     21\u001b[0m     \u001b[0;31m# apply each for one minute\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m     \u001b[0;32mwhile\u001b[0m \u001b[0mtimer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtoc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m60\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 23\u001b[0;31m         \u001b[0mwg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfire_wait\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     24\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[0;31m# get the results\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/miniconda/lib/python3.8/site-packages/pacswg/wg.py\u001b[0m in \u001b[0;36mfire_wait\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    121\u001b[0m         \u001b[0mwait_time\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdelay_func\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrps\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfire_timer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtoc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    122\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mwait_time\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 123\u001b[0;31m             \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mwait_time\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    124\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    125\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mstop_workers\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
     }
    ],
    "metadata": {}
