ran an experiment

--- a/experiments/06-trace-control.ipynb
+++ b/experiments/06-trace-control.ipynb
@@ -616,13 +616,21 @@
       }
      },
      "metadata": {}
+    },
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Total Requests Made: 37197\n",
+      "Successful Requests Made: 37197\n"
+     ]
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "source": [
     "# collect the results\n",
     "df_res = pd.DataFrame(data=all_res)\n",
@@ -646,7 +654,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Results Name: res-2021-06-30_08-43-15\n"
+      "Results Name: res-2021-07-28_18-06-59\n"
      ]
     }
    ],
@@ -654,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "source": [
     "# stop the controller to save the results\n",
     "controller.stop_control_thread()"
@@ -664,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "source": [
     "df_proxy_stats = pd.DataFrame(data=controller.acc_proxy_stats)\n",
     "df_proxy_stats.to_csv(os.path.join(res_folder, proxy_results_filesname))\n",
@@ -683,39 +691,39 @@
        "4              1                     1                     1.0   \n",
        "\n",
        "   maxBufferTimeoutMs  currentReplicaCount  currentReadyReplicaCount  \\\n",
-       "0                 800                    2                         0   \n",
+       "0                 800                    2                         1   \n",
        "1                 800                    2                         2   \n",
        "2                 800                    2                         2   \n",
-       "3                 800                    3                         3   \n",
-       "4                 800                    3                         3   \n",
+       "3                 800                    1                         1   \n",
+       "4                 800                    1                         1   \n",
        "\n",
        "   currentConcurrency  averageConcurrency  averageArrivalRate  \\\n",
        "0                   0                 0.2                0.05   \n",
-       "1                   0                 0.7                4.55   \n",
-       "2                   1                 0.3                4.75   \n",
-       "3                   1                 1.0                5.05   \n",
-       "4                   0                 1.2                5.60   \n",
+       "1                   0                 0.4                2.10   \n",
+       "2                   0                 0.0                1.85   \n",
+       "3                   1                 0.1                2.15   \n",
+       "4                   0                 0.0                1.90   \n",
        "\n",
        "   averageDepartureRate  averageDispatchRate  averageErrorRate  \\\n",
        "0                  0.00                 0.05                 0   \n",
-       "1                  4.50                 4.55                 0   \n",
-       "2                  4.75                 4.75                 0   \n",
-       "3                  5.20                 5.05                 0   \n",
-       "4                  5.55                 5.60                 0   \n",
+       "1                  2.05                 2.10                 0   \n",
+       "2                  1.85                 1.85                 0   \n",
+       "3                  2.15                 2.15                 0   \n",
+       "4                  1.90                 1.90                 0   \n",
        "\n",
        "   averageTimeoutRatio  reponseTimeAverage  reponseTimeP50  reponseTimeP95  \\\n",
        "0                    0                 NaN             NaN             NaN   \n",
-       "1                    0          133.369565            30.5           354.6   \n",
-       "2                    0          109.771127            23.5           344.1   \n",
-       "3                    0          128.580000            35.0           375.5   \n",
-       "4                    0          144.066879            75.0           400.8   \n",
+       "1                    0          138.898305            19.0           326.1   \n",
+       "2                    0          107.805310            19.0           325.4   \n",
+       "3                    0          105.142857            20.0           344.0   \n",
+       "4                    0          106.701754            18.0           344.0   \n",
        "\n",
        "                              batchResponseTimeStats  \n",
        "0                                                 {}  \n",
-       "1  {'1': {'values': [11, 11, 11, 11, 12, 12, 12, ...  \n",
-       "2  {'1': {'values': [11, 11, 11, 11, 11, 11, 11, ...  \n",
-       "3  {'1': {'values': [11, 11, 11, 11, 11, 11, 11, ...  \n",
-       "4  {'1': {'values': [11, 11, 11, 11, 11, 11, 11, ...  "
+       "1  {'1': {'values': [14, 14, 14, 14, 14, 14, 15, ...  \n",
+       "2  {'1': {'values': [13, 13, 13, 14, 14, 14, 14, ...  \n",
+       "3  {'1': {'values': [13, 13, 13, 13, 14, 14, 14, ...  \n",
+       "4  {'1': {'values': [13, 13, 13, 13, 13, 13, 13, ...  "
       ],
       "text/html": [
        "<div>\n",
@@ -763,7 +771,7 @@
        "      <td>NaN</td>\n",
        "      <td>800</td>\n",
        "      <td>2</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0.2</td>\n",
        "      <td>0.05</td>\n",
@@ -785,16 +793,16 @@
        "      <td>2</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.7</td>\n",
-       "      <td>4.55</td>\n",
-       "      <td>4.50</td>\n",
-       "      <td>4.55</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>2.10</td>\n",
+       "      <td>2.05</td>\n",
+       "      <td>2.10</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>133.369565</td>\n",
-       "      <td>30.5</td>\n",
-       "      <td>354.6</td>\n",
-       "      <td>{'1': {'values': [11, 11, 11, 11, 12, 12, 12, ...</td>\n",
+       "      <td>138.898305</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>326.1</td>\n",
+       "      <td>{'1': {'values': [14, 14, 14, 14, 14, 14, 15, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -804,17 +812,17 @@
        "      <td>800</td>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.3</td>\n",
-       "      <td>4.75</td>\n",
-       "      <td>4.75</td>\n",
-       "      <td>4.75</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.85</td>\n",
+       "      <td>1.85</td>\n",
+       "      <td>1.85</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>109.771127</td>\n",
-       "      <td>23.5</td>\n",
-       "      <td>344.1</td>\n",
-       "      <td>{'1': {'values': [11, 11, 11, 11, 11, 11, 11, ...</td>\n",
+       "      <td>107.805310</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>325.4</td>\n",
+       "      <td>{'1': {'values': [13, 13, 13, 14, 14, 14, 14, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -822,19 +830,19 @@
        "      <td>1</td>\n",
        "      <td>1.0</td>\n",
        "      <td>800</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
        "      <td>1</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>5.05</td>\n",
-       "      <td>5.20</td>\n",
-       "      <td>5.05</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>2.15</td>\n",
+       "      <td>2.15</td>\n",
+       "      <td>2.15</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>128.580000</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>375.5</td>\n",
-       "      <td>{'1': {'values': [11, 11, 11, 11, 11, 11, 11, ...</td>\n",
+       "      <td>105.142857</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>344.0</td>\n",
+       "      <td>{'1': {'values': [13, 13, 13, 13, 14, 14, 14, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -842,19 +850,19 @@
        "      <td>1</td>\n",
        "      <td>1.0</td>\n",
        "      <td>800</td>\n",
-       "      <td>3</td>\n",
-       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>1.2</td>\n",
-       "      <td>5.60</td>\n",
-       "      <td>5.55</td>\n",
-       "      <td>5.60</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.90</td>\n",
+       "      <td>1.90</td>\n",
+       "      <td>1.90</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>144.066879</td>\n",
-       "      <td>75.0</td>\n",
-       "      <td>400.8</td>\n",
-       "      <td>{'1': {'values': [11, 11, 11, 11, 11, 11, 11, ...</td>\n",
+       "      <td>106.701754</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>344.0</td>\n",
+       "      <td>{'1': {'values': [13, 13, 13, 13, 13, 13, 13, ...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -862,7 +870,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 15
+     "execution_count": 16
     }
    ],
    "metadata": {}
