minor fixes on experiment

--- a/experiments/06-trace-control.ipynb
+++ b/experiments/06-trace-control.ipynb
@@ -34,6 +34,7 @@
     "# imports\n",
     "import time\n",
     "import traceback\n",
+    "import os\n",
     "\n",
     "# library imports\n",
     "from tqdm.auto import tqdm\n",
@@ -110,7 +111,7 @@
     "upstream_rt_max_len = 1000\n",
     "\n",
     "# disable controller?\n",
-    "disable_controller = True\n",
+    "disable_controller = False\n",
     "if disable_controller:\n",
     "    initial_batch_size = 1\n",
     "\n",
@@ -416,8 +417,8 @@
     "requests_results_filename = f'{res_name}_reqs.csv'\n",
     "proxy_results_filesname = f'{res_name}_proxy.csv'\n",
     "if disable_controller:\n",
-    "    requests_results_filename.replace('.csv', '_no_controller.csv')\n",
-    "    proxy_results_filesname.replace('.csv', '_no_controller.csv')\n",
+    "    requests_results_filename = requests_results_filename.replace('.csv', '_no_controller.csv')\n",
+    "    proxy_results_filesname = proxy_results_filesname.replace('.csv', '_no_controller.csv')\n",
     "\n",
     "df_res.to_csv(os.path.join(res_folder, requests_results_filename))\n",
     "print('Results Name:', res_name)"
