minor changes in plots

--- a/experiments/07-plot-trace-control.ipynb
+++ b/experiments/07-plot-trace-control.ipynb
@@ -35,13 +35,14 @@
                 "# trace_name = 'trace2'\n",
                 "\n",
                 "service_name = 'bentoml-pytorch-fashion-mnist'\n",
-                "exp_name = 'res-2021-07-28_18-06-59'\n",
+                "# exp_name = 'res-2021-07-29_18-18-28_proxy_no_controller'\n",
+                "exp_name = 'res-2021-07-29_23-08-36_proxy'\n",
                 "slo_timeout = 1000\n",
                 "trace_name = 'trace_trace_wc'\n",
                 "\n",
                 "exp_folder = f'results/{trace_name}/{service_name}'\n",
-                "exp_proxy_filename = f'{exp_folder}/{exp_name}_proxy.csv'\n",
-                "exp_reqs_filename = f'{exp_folder}/{exp_name}_reqs.csv'"
+                "exp_proxy_filename = f'{exp_folder}/{exp_name}.csv'\n",
+                "exp_reqs_filename = exp_proxy_filename.replace('proxy', 'reqs')"
             ],
             "outputs": [],
             "metadata": {}
@@ -90,9 +91,9 @@
             "cell_type": "code",
             "execution_count": null,
             "source": [
-                "plt.plot(df_proxy_stats['reponseTimeAverage'][5:30])\n",
-                "plt.plot(df_proxy_stats['reponseTimeP50'][5:30])\n",
-                "plt.plot(df_proxy_stats['reponseTimeP95'][5:30])"
+                "# plt.plot(df_proxy_stats['reponseTimeAverage'][5:30])\n",
+                "# plt.plot(df_proxy_stats['reponseTimeP50'][5:30])\n",
+                "# plt.plot(df_proxy_stats['reponseTimeP95'][5:30])"
             ],
             "outputs": [],
             "metadata": {}
@@ -103,7 +104,8 @@
             "source": [
                 "plt.plot(df_proxy_stats['currentReplicaCount'])\n",
                 "plt.plot(df_proxy_stats['currentReadyReplicaCount'], ls='--')\n",
-                "print(df_proxy_stats['currentReadyReplicaCount'].mean())"
+                "print(df_proxy_stats['currentReadyReplicaCount'].mean())\n",
+                "print(df_proxy_stats['currentReadyReplicaCount'].max())"
             ],
             "outputs": [],
             "metadata": {}
