running new experiments

--- a/experiments/06-trace-control.ipynb
+++ b/experiments/06-trace-control.ipynb
@@ -80,9 +80,21 @@
     "# service_name = 'tfserving-mobilenetv1'\n",
     "# slo_timeout = \n",
     "\n",
-    "# service_name = 'bentoml-keras-toxic-comments'\n",
+    "service_name = 'bentoml-keras-toxic-comments'\n",
+    "service_url = f'{server_address}/proxy/{service_name}'\n",
+    "slo_timeout = 500\n",
+    "initial_batch_size = 5\n",
+    "bs_config = {\n",
+    "    'max_bs': 50,\n",
+    "    'min_bs': 1,\n",
+    "    'inc_step': 5,\n",
+    "    'dec_mult': 0.7,\n",
+    "}\n",
+    "average_timeout_ratio_threshold = 0.5\n",
+    "\n",
+    "# service_name = 'bentoml-pytorch-fashion-mnist'\n",
     "# service_url = f'{server_address}/proxy/{service_name}'\n",
-    "# slo_timeout = 500\n",
+    "# slo_timeout = 1000\n",
     "# initial_batch_size = 5\n",
     "# bs_config = {\n",
     "#     'max_bs': 100,\n",
@@ -92,18 +104,6 @@
     "# }\n",
     "# average_timeout_ratio_threshold = 0.5\n",
     "\n",
-    "service_name = 'bentoml-pytorch-fashion-mnist'\n",
-    "service_url = f'{server_address}/proxy/{service_name}'\n",
-    "slo_timeout = 1000\n",
-    "initial_batch_size = 5\n",
-    "bs_config = {\n",
-    "    'max_bs': 100,\n",
-    "    'min_bs': 1,\n",
-    "    'inc_step': 5,\n",
-    "    'dec_mult': 0.7,\n",
-    "}\n",
-    "average_timeout_ratio_threshold = 0.5\n",
-    "\n",
     "# SLO Target\n",
     "slo_target = slo_timeout * 0.8\n",
     "\n",
@@ -111,7 +111,7 @@
     "upstream_rt_max_len = 1000\n",
     "\n",
     "# disable controller?\n",
-    "disable_controller = False\n",
+    "disable_controller = True\n",
     "if disable_controller:\n",
     "    initial_batch_size = 1\n",
     "\n",
