minor improvements in trace plots

--- a/experiments/07-plot-trace-control.ipynb
+++ b/experiments/07-plot-trace-control.ipynb
@@ -34,10 +34,18 @@
                 "# slo_timeout = 500\n",
                 "# trace_name = 'trace2'\n",
                 "\n",
-                "service_name = 'bentoml-pytorch-fashion-mnist'\n",
-                "# exp_name = 'res-2021-07-29_18-18-28_proxy_no_controller'\n",
-                "exp_name = 'res-2021-07-29_23-08-36_proxy'\n",
-                "slo_timeout = 1000\n",
+                "# service_name = 'bentoml-pytorch-fashion-mnist'\n",
+                "# # exp_name = 'res-2021-07-29_18-18-28_proxy_no_controller'\n",
+                "# exp_name = 'res-2021-07-29_23-08-36_proxy'\n",
+                "# slo_timeout = 1000\n",
+                "# trace_name = 'trace_trace_wc'\n",
+                "\n",
+                "service_name = 'bentoml-iris'\n",
+                "exp_name = 'res-2021-08-03_11-46-33_proxy'\n",
+                "# exp_name = 'res-2021-08-03_16-39-31_proxy_no_controller'\n",
+                "# exp_name = 'res-2021-08-03_19-10-32_proxy'\n",
+                "# exp_name = 'res-2021-08-04_11-35-40_proxy'\n",
+                "slo_timeout = 500\n",
                 "trace_name = 'trace_trace_wc'\n",
                 "\n",
                 "exp_folder = f'results/{trace_name}/{service_name}'\n",
@@ -206,9 +214,19 @@
             "metadata": {}
         },
         {
+            "cell_type": "markdown",
+            "source": [
+                "# Extract Experiment Parameters"
+            ],
+            "metadata": {}
+        },
+        {
             "cell_type": "code",
             "execution_count": null,
-            "source": [],
+            "source": [
+                "slo_miss_percentage = np.sum(df_res['response_time_ms_server'] > slo_timeout) / df_res.shape[0] * 100\n",
+                "print(f'slo_miss_percentage {slo_miss_percentage:4.3f}%')"
+            ],
             "outputs": [],
             "metadata": {}
         }
