--- a/experiments/07-plot-trace-control.ipynb
+++ b/experiments/07-plot-trace-control.ipynb
@@ -35,18 +35,21 @@
                 "# trace_name = 'trace2'\n",
                 "\n",
                 "# service_name = 'bentoml-pytorch-fashion-mnist'\n",
+                "# trace_name = 'trace_trace_wc'\n",
                 "# # exp_name = 'res-2021-07-29_18-18-28_proxy_no_controller'\n",
                 "# exp_name = 'res-2021-07-29_23-08-36_proxy'\n",
                 "# slo_timeout = 1000\n",
-                "# trace_name = 'trace_trace_wc'\n",
                 "\n",
                 "service_name = 'bentoml-iris'\n",
-                "exp_name = 'res-2021-08-03_11-46-33_proxy'\n",
+                "trace_name = 'trace_trace_wc'\n",
+                "# experiments\n",
+                "# exp_name = 'res-2021-08-03_11-46-33_proxy'\n",
                 "# exp_name = 'res-2021-08-03_16-39-31_proxy_no_controller'\n",
                 "# exp_name = 'res-2021-08-03_19-10-32_proxy'\n",
                 "# exp_name = 'res-2021-08-04_11-35-40_proxy'\n",
-                "slo_timeout = 500\n",
-                "trace_name = 'trace_trace_wc'\n",
+                "# slo_timeout = 500\n",
+                "exp_name = 'res-2021-08-04_15-54-03_proxy'\n",
+                "slo_timeout = 200\n",
                 "\n",
                 "exp_folder = f'results/{trace_name}/{service_name}'\n",
                 "exp_proxy_filename = f'{exp_folder}/{exp_name}.csv'\n",
