--- a/experiments/07-plot-trace-control.ipynb
+++ b/experiments/07-plot-trace-control.ipynb
@@ -48,7 +48,8 @@
                 "# exp_name = 'res-2021-08-03_19-10-32_proxy'\n",
                 "# exp_name = 'res-2021-08-04_11-35-40_proxy'\n",
                 "# slo_timeout = 500\n",
-                "exp_name = 'res-2021-08-04_15-54-03_proxy'\n",
+                "# exp_name = 'res-2021-08-04_15-54-03_proxy'\n",
+                "exp_name = 'res-2021-08-04_18-12-27_proxy'\n",
                 "slo_timeout = 200\n",
                 "\n",
                 "exp_folder = f'results/{trace_name}/{service_name}'\n",
