--- a/experiments/06-trace-control.ipynb
+++ b/experiments/06-trace-control.ipynb
@@ -147,7 +147,8 @@
     "\n",
     "# autoscale traces\n",
     "# trace_name = 'trace_wc'\n",
-    "trace_name = 'trace_t5'\n",
+    "# trace_name = 'trace_t5'\n",
+    "trace_name = 'trace_t4'\n",
     "autoscale_folder_path = '../traces/files/AutoScale/'\n",
     "autoscale_trace_file_names = {\n",
     "  # Big Spike, NLANR [nlanr1995]\n",
