--- a/experiments/06-trace-control.ipynb
+++ b/experiments/06-trace-control.ipynb
@@ -65,18 +65,18 @@
     "# service_name = 'bentoml-onnx-resnet50'\n",
     "# slo_timeout = \n",
     "\n",
-    "service_name = 'bentoml-iris'\n",
-    "service_url = f'{server_address}/proxy/{service_name}'\n",
-    "slo_timeout = 500\n",
-    "initial_batch_size = 5\n",
-    "bs_config = {\n",
-    "    'max_bs': 20,\n",
-    "    'min_bs': 1,\n",
-    "    'inc_step': 5,\n",
-    "    'dec_mult': 0.7,\n",
-    "}\n",
-    "average_timeout_ratio_threshold = 0.9\n",
-    "max_rps = 200\n",
+    "# service_name = 'bentoml-iris'\n",
+    "# service_url = f'{server_address}/proxy/{service_name}'\n",
+    "# slo_timeout = 500\n",
+    "# initial_batch_size = 5\n",
+    "# bs_config = {\n",
+    "#     'max_bs': 20,\n",
+    "#     'min_bs': 1,\n",
+    "#     'inc_step': 5,\n",
+    "#     'dec_mult': 0.7,\n",
+    "# }\n",
+    "# average_timeout_ratio_threshold = 0.9\n",
+    "# max_rps = 200\n",
     "\n",
     "# service_name = 'tfserving-mobilenetv1'\n",
     "# slo_timeout = \n",
@@ -94,18 +94,18 @@
     "# average_timeout_ratio_threshold = 0.5\n",
     "# max_rps = 50\n",
     "\n",
-    "# service_name = 'bentoml-pytorch-fashion-mnist'\n",
-    "# service_url = f'{server_address}/proxy/{service_name}'\n",
-    "# slo_timeout = 1000\n",
-    "# initial_batch_size = 5\n",
-    "# bs_config = {\n",
-    "#     'max_bs': 20,\n",
-    "#     'min_bs': 1,\n",
-    "#     'inc_step': 5,\n",
-    "#     'dec_mult': 0.7,\n",
-    "# }\n",
-    "# average_timeout_ratio_threshold = 0.5\n",
-    "# max_rps = 30\n",
+    "service_name = 'bentoml-pytorch-fashion-mnist'\n",
+    "service_url = f'{server_address}/proxy/{service_name}'\n",
+    "slo_timeout = 200\n",
+    "initial_batch_size = 5\n",
+    "bs_config = {\n",
+    "    'max_bs': 20,\n",
+    "    'min_bs': 1,\n",
+    "    'inc_step': 5,\n",
+    "    'dec_mult': 0.7,\n",
+    "}\n",
+    "average_timeout_ratio_threshold = 0.5\n",
+    "max_rps = 100\n",
     "\n",
     "# SLO Target\n",
     "slo_target = slo_timeout * 0.8\n",
@@ -114,7 +114,7 @@
     "upstream_rt_max_len = 1000\n",
     "\n",
     "# disable controller?\n",
-    "disable_controller = True\n",
+    "disable_controller = False\n",
     "if disable_controller:\n",
     "    initial_batch_size = 1\n",
     "\n",
@@ -146,9 +146,9 @@
     "# trace_name = 'staircase'\n",
     "\n",
     "# autoscale traces\n",
-    "trace_name = 'trace_wc'\n",
+    "# trace_name = 'trace_wc'\n",
     "# trace_name = 'trace_t5'\n",
-    "# trace_name = 'trace_t4'\n",
+    "trace_name = 'trace_t4'\n",
     "autoscale_folder_path = '../traces/files/AutoScale/'\n",
     "autoscale_trace_file_names = {\n",
     "  # Big Spike, NLANR [nlanr1995]\n",
