--- a/experiments/06-trace-control.ipynb
+++ b/experiments/06-trace-control.ipynb
@@ -96,7 +96,7 @@
     "\n",
     "service_name = 'bentoml-pytorch-fashion-mnist'\n",
     "service_url = f'{server_address}/proxy/{service_name}'\n",
-    "slo_timeout = 200\n",
+    "slo_timeout = 1000\n",
     "initial_batch_size = 5\n",
     "bs_config = {\n",
     "    'max_bs': 20,\n",
@@ -114,7 +114,7 @@
     "upstream_rt_max_len = 1000\n",
     "\n",
     "# disable controller?\n",
-    "disable_controller = False\n",
+    "disable_controller = True\n",
     "if disable_controller:\n",
     "    initial_batch_size = 1\n",
     "\n",
@@ -146,9 +146,9 @@
     "# trace_name = 'staircase'\n",
     "\n",
     "# autoscale traces\n",
-    "# trace_name = 'trace_wc'\n",
+    "trace_name = 'trace_wc'\n",
     "# trace_name = 'trace_t5'\n",
-    "trace_name = 'trace_t4'\n",
+    "# trace_name = 'trace_t4'\n",
     "autoscale_folder_path = '../traces/files/AutoScale/'\n",
     "autoscale_trace_file_names = {\n",
     "  # Big Spike, NLANR [nlanr1995]\n",
@@ -325,7 +325,7 @@
     "print(kn_command)\n",
     "!{kn_command}\n",
     "print('waiting for settings to converge')\n",
-    "time.sleep(10)"
+    "time.sleep(20)"
    ],
    "outputs": [],
    "metadata": {}
